<resources>
    <string name="app_name">Simple Weather</string>

    <string name="hint_search_location">Search location</string>
    <string name="attribution_powered_by" translatable="false">Powered by &#160;</string>
    <string name="attribution_weather_provided_by">Weather data provided by &#160;</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="horizon">Horizon</string>
    <string name="action_add_to_list">Add to list</string>
    <string name="action_added_to_list">Added to list</string>

    <!--    WarningView strings -->
    <string name="warning">Warning</string>
    <string name="warning_rainfall" translatable="false">Expecting Rainfall</string>
    <string name="rain_percent">% Rain</string>
    <string name="expected_warning_start_time">Exp. start time</string>
    <string name="expected_warning_end_time">Exp. end time</string>

    <!--    SunriseSunsetView strings -->
    <string name="sunrise_and_sunset"><![CDATA[sunrise & sunset]]></string>
    <string name="day_length">"Length of day: "</string>
    <string name="remaining_daylight">"Remaining daylight: "</string>
    <string name="time_duration_format">%dH %02dM</string>

    <!--    LocationView strings-->
    <string name="temperature_degrees" translatable="false">%1$s°</string>
    <string name="last_update_time">updated: %1$s</string>

    <!--    IndicatorsView strings-->
    <string name="indicator_time">Time</string>
    <string name="indicator_uv" translatable="false">uv</string>
    <string name="indicator_rain">% rain</string>
    <string name="indicator_aq" translatable="false">aq</string>
    <string name="format_12_hours_time" translatable="false">K:mm a</string>
    <string name="format_24_hours_time" translatable="false">HH:mm</string>

    <!--    Messages-->
    <string name="search_history_cleared">Search history cleared</string>

    <!--    Error messages-->
    <string name="error_general">Something went wrong, unable to load the data</string>
    <string name="error_service_unavailable">Service unavailable</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_no_cached_data">No saved locations</string>
    <string name="error_empty_request">Start typing request for search</string>
    <string name="error_no_results">Can\'t find location</string>
    <string name="error_location_is_not_saved">This data was deleted</string>
    <string name="error_can_not_update_location">Can not update location after language change</string>
    <string name="error_outdated_forecast">The weather forecast is outdated, try to refresh it</string>
    <string name="error_favorites_limit">Can\'t save the location, the number of favorite locations has reached the limit</string>
    <string name="error_unable_to_find_current_location">Something went wrong, unable to find current location</string>
    <string name="error_unable_to_refresh">Unable to refresh the forecast</string>

    <!--    Dialog actions-->
    <string name="confirm">Yes</string>
    <string name="dismiss">Cancel</string>

    <!--    Delete confirmation dialog-->
    <string name="delete_location">Are you sure you want to delete this location from your favorites?</string>

    <!--    Delete confirmation dialog-->
    <string name="add_current_location">Do you want to get the weather forecast for current location? The application needs location permission for this.</string>

    <!--    Clear search history confirmation dialog-->
    <string name="clear_search_history_confirmation">Are you sure you want to clear your search history?</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="title_clear_search_history">Clear search history</string>
    <string name="title_about_app">About app</string>

    <!-- Units Preferences -->
    <string name="units_title">Units</string>
    <string name="unit_fahrenheit" translatable="false">fahrenheit</string>
    <string name="unit_celsius" translatable="false">celsius</string>

    <!-- Language Preferences -->
    <string name="language_title">Language</string>
    <string name="language_eng" translatable="false">en</string>
    <string name="language_uk" translatable="false">uk</string>

    <!-- Time Preferences -->
    <string name="time_title">Use 24-hour format</string>
    <string name="time_summary_on" translatable="false">13:00</string>
    <string name="time_summary_off" translatable="false">1:00 PM</string>

    <!--    Preference keys-->
    <string name="key_time" translatable="false">time</string>
    <string name="key_language" translatable="false">language</string>
    <string name="key_units" translatable="false">unit</string>
    <string name="key_clear_search_history" translatable="false">clear_history</string>
    <string name="key_about" translatable="false">about_app</string>

    <!--    Menu titles-->
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>

    <!--    Menu titles-->
    <string name="notification_loading_channel_id" translatable="false">loading_notification</string>
    <string name="notification_loading_channel_name">Update notification</string>
    <string name="notification_loading_channel_description">Weather forecast data update notification</string>
    <string name="notification_loading_title">Updating weather forecast</string>

    <!--    Tooltips-->
    <string name="tooltip_air_quality_text">AQ – air quality index. Possible values: 1–5, where %1$s</string>
    <string name="tooltip_air_quality_1">1 - Good</string>
    <string name="tooltip_air_quality_2">2 - Fair</string>
    <string name="tooltip_air_quality_3">3 - Moderate</string>
    <string name="tooltip_air_quality_4">4 - Poor</string>
    <string name="tooltip_air_quality_5">5 - Very Poor</string>
    <string name="tooltip_value_unknown">"? - unknown, can't load value"</string>

    <!--    Fragment titles-->
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>

    <string name="tooltip_ultraviolet_index_text">UV – Ultraviolet index\n%1$s</string>
    <string name="tooltip_ultraviolet_index_low">0–2 is Low</string>
    <string name="tooltip_ultraviolet_index_moderate">3–5 is Moderate</string>
    <string name="tooltip_ultraviolet_index_high">6–7 is High</string>
    <string name="tooltip_ultraviolet_index_very_high">8–10 is Very High</string>
    <string name="tooltip_ultraviolet_index_extreme">11+ is Extreme</string>

    <string name="about_data_safety_title">Data safety</string>
    <string name="about_privacy_policy_link">View <b>Privacy Policy</b></string>

    <string name="about_design_title">Design</string>
    <string name="about_design_description">Simple Weather app uses a design based on work by <b>Pavan Kamal</b>, licensed under the <b>Creative Commons Attribution 4.0 International (CC BY 4.0)</b> license. The original design was changed to meet technical requirements.</string>
    <string name="about_ccby4_license">More about <b>CC BY 4.0 license</b></string>
    <string name="about_original_design">Original design by <b>Pavan Kamal</b></string>
    <string name="about_designer_page"><b>Pavan Kamal</b> on Instagram</string>

    <string name="about_data_title">Data</string>
    <string name="about_data_description">Simple Weather app uses weather data provided by <b>OpenWeather</b>.\nThe <b>OpenWeather API</b> is licensed under the <b>Creative Commons Attribution-ShareAlike 4.0 International license (CC BY-SA 4.0)</b>.\nThe data and database from <b>OpenWeather</b> are licensed by the <b>Open Data Commons Open Database License (ODbL)</b>.</string>
    <string name="about_openweather"><b>OpenWeather</b> website</string>
    <string name="about_ccbysa4_license">More about <b>CC BY-SA 4.0 license</b></string>
    <string name="about_odbl_license">More about <b>ODbL license</b></string>

    <string name="about_locations_title">API</string>
    <string name="about_locations_descriptions">Simple Weather app uses <b>Place Autocomplete service</b> and <b>Geocoding API</b> that are part of <b>Google Maps API</b>. By using this application, users are bound by <b>Google’s Terms of Service</b>, <b>Terms of Use</b> and <b>Privacy Policy</b>.</string>
    <string name="about_locations_terms_of_use">Google’s <b>Terms of Use</b></string>
    <string name="about_locations_terms_of_service">Google’s <b>Terms of Service</b></string>
    <string name="about_locations_privacy_policy">Google’s <b>Privacy Policy</b></string>
</resources>