<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            app:defaultValue="celsius"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:title="@string/units_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="time"
            app:defaultValue="true"
            app:summaryOff="@string/time_summary_off"
            app:summaryOn="@string/time_summary_on"
            app:title="@string/time_title" />

    </PreferenceCategory>

</PreferenceScreen>