<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rectangle_rounded_11"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/indicator_time_label"
        style="@style/MediumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicator_time"
        app:layout_constraintEnd_toEndOf="@id/indicator_time_value"
        app:layout_constraintStart_toStartOf="@id/indicator_time_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/indicator_time_value"
        style="@style/MediumSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        tools:text="11:25 am"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/indicator_uv_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator_time_label" />

    <TextView
        android:id="@+id/indicator_uv_label"
        style="@style/MediumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicator_uv"
        app:layout_constraintEnd_toEndOf="@id/indicator_uv_value"
        app:layout_constraintStart_toStartOf="@id/indicator_uv_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/indicator_uv_value"
        style="@style/MediumSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="2dp"
        tools:text="4"
        app:layout_constraintEnd_toStartOf="@+id/indicator_rain_percent_value"
        app:layout_constraintStart_toEndOf="@+id/indicator_time_value"
        app:layout_constraintTop_toBottomOf="@id/indicator_uv_label" />

    <TextView
        android:id="@+id/indicator_rain_percent_label"
        style="@style/MediumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicator_rain"
        app:layout_constraintEnd_toEndOf="@id/indicator_rain_percent_value"
        app:layout_constraintStart_toStartOf="@id/indicator_rain_percent_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/indicator_rain_percent_value"
        style="@style/MediumSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="2dp"
        tools:text="58%"
        app:layout_constraintEnd_toStartOf="@+id/indicator_aq_value"
        app:layout_constraintStart_toEndOf="@+id/indicator_uv_value"
        app:layout_constraintTop_toBottomOf="@id/indicator_rain_percent_label" />

    <TextView
        android:id="@+id/indicator_aq_label"
        style="@style/MediumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicator_aq"
        app:layout_constraintEnd_toEndOf="@id/indicator_aq_value"
        app:layout_constraintStart_toStartOf="@id/indicator_aq_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/indicator_aq_value"
        style="@style/MediumSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="8dp"
        tools:text="5"
        android:tooltipText="@string/tooltip_air_quality_text"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/indicator_rain_percent_value"
        app:layout_constraintTop_toBottomOf="@id/indicator_aq_label" />

</merge>