<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/warning_image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/warning_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/warning_label"
        app:srcCompat="@drawable/ic_warning" />

    <TextView
        android:id="@+id/warning_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/warning"
        app:layout_constraintStart_toEndOf="@+id/warning_image_icon"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextYellowSmall" />

    <ImageView
        android:id="@+id/warning_forecast_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weather_rain" />

    <TextView
        android:id="@+id/warning_rain_percent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/rain_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning_label"
        style="@style/TextGrayTitle" />

    <TextView
        android:id="@+id/warning_rain_percent_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/warning_rain_percent_title"
        app:layout_constraintStart_toStartOf="@+id/warning_rain_percent_title"
        app:layout_constraintTop_toBottomOf="@+id/warning_rain_percent_title"
        tools:text="58%"
        style="@style/TextGrayMedium" />

    <TextView
        android:id="@+id/warning_exp_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/expected_rain_time"
        style="@style/TextGrayTitle"
        app:layout_constraintEnd_toStartOf="@+id/warning_forecast_image"
        app:layout_constraintTop_toBottomOf="@+id/warning_label" />

    <TextView
        android:id="@+id/warning_exp_time_value"
        style="@style/TextGrayMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/warning_exp_time_title"
        app:layout_constraintStart_toStartOf="@+id/warning_exp_time_title"
        app:layout_constraintTop_toBottomOf="@+id/warning_exp_time_title"
        tools:text="02:00 PM" />

    <TextView
        android:id="@+id/warning_text"
        style="@style/TextYellowLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        tools:text="@string/warning_rainfall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning_rain_percent_value" />
</merge>